[workspace]
members = [
#    "crates/nican",
    "crates/rs-can",
#    "zlgcan.new",
    "crates/zlgcan",
]

resolver = "2"

[workspace.dependencies]
thiserror = "2"
log = "0"
dlopen2 = "0.7"
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"
iso14229-1 = { version = "0.1.0-alpha0" }
iso15765-2 = { version = "0.1.0-alpha0" }
rs-can = { path = "crates/rs-can" }

# dev-dependencies
anyhow = "1"
hex-literal = "0.4"
bin_file = "0.1"
crc = "3.2"
docan = { version = "0.1.0-alpha0" }
