[workspace]
members = [
    "rs-can",
    "nican",    # only on 32bit Windows
    "socketcan",# only on Linux
    "zlgcan",
]
default-members = [
    "rs-can",
    "zlgcan",
]

resolver = "2"

[workspace.package]
version = "0.2.0-alpha0"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["zhuyu <zhuyu4839@gmail.com>"]

[workspace.dependencies]
thiserror = "2"
log = "0"
dlopen2 = "0.7"
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"
hex = "0.4"

rs-can = { path = "rs-can" }
#iso15765-2 = "0.1.0-alpha1"
#iso14229-1 = "0.1.0-alpha1"

# dev-dependencies
anyhow = "1"
rand = "0.9"
#hex-literal = "1"
bin_file = "0.1"
crc = "3.2"
#docan = "0.1.0-alpha1"
