[workspace]
members = [
    "rs-can",
    "nican",    # only on 32bit Windows
    "socketcan",# only on Linux
    "zlgcan",
]
default-members = [
    "rs-can",
    "zlgcan",
]

resolver = "2"

[workspace.package]
version = "0.2.0-alpha5"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["Jesse Smith <zhuyu4839@gmail.com>"]

[workspace.dependencies]
bitflags = "2.6"
derive-getters = "0.5"
dlopen2 = "0.7"
dotenvy = "0.15"
log = "0"
serde = "1.0"
serde_yaml = "0.9"
thiserror = "2"

rs-can = { path = "rs-can", version = "0.2.0-alpha5" }

# dev-dependencies
anyhow = "1"
rand = "0.9"
