[package]
name = "nican"
version = "0.1.1-alpha0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license = "GPL-3.0"
description = "A Nican driver."
homepage = "https://github.com/zhuyu4839/rust-can"
repository = "https://github.com/zhuyu4839/rust-can"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
iso15765-2 = { workspace = true }
iso14229-1 = { workspace = true }
rs-can = { version = "0.1.0-alpha2", path = "../rs-can" }

[dev-dependencies]
anyhow = { workspace = true }
docan = { workspace = true }

[build-dependencies]
bindgen = "0.70"
