[package]
name = "nican"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Nican driver."
homepage = "https://github.com/zhuyu4839/rust-can"
repository = "https://github.com/zhuyu4839/rust-can"

[lib]
crate-type = ["lib", "cdylib"]
name = "nican_rs"

[dependencies]
log = { workspace = true }
winapi = { version = "0.3", features = ["errhandlingapi", "libloaderapi", "winnt", "minwindef"] }
rs-can = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
#docan = { workspace = true }
#iso14229-1 = { workspace = true }

#[build-dependencies]
#bindgen = "0.71"
