[package]
name = "rs-can"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Nican driver."
homepage = "https://github.com/zhuyu4839/rust-can"
repository = "https://github.com/zhuyu4839/rust-can"
keywords = [
    "can",
    "driver"
]

[dependencies]
log = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }

[features]
async = []
