[package]
name = "socketcan-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SocketCAN driver with UDS protocol."
homepage = "https://github.com/zhuyu4839/rust-can"
repository = "https://github.com/zhuyu4839/rust-can"

keywords = [
    "SocketCAN",
    "UDS"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = { workspace = true }
libc = "0.2"
nix = { version="0.29", features = ["poll", "process", "net"] }
rs-can = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
#iso14229-1 = { workspace = true }
#docan = { workspace = true }
